code-blocks-server/code-blocks/tests/python/snapshots/python__move_class.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---
input:

        @decor1 # src
        @decor2
        class A:
            ...
           
        class C: # dst
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func():
            ...

---
output:

        class C: # dst
        ^ Dest
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        @decor1 # src
        ^ Source
        @decor2
        class A:
            ...
                
        def func():
            ...
