code-blocks-server/code-blocks/tests/python/snapshots/python__move_method.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---
input:

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self): # src
                pass
        
            @staticmethod() # dst
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func():
            ...

---
output:

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            @staticmethod() # dst
            ^ Dest
            def foo():
                """method docstring"""
                
            def __init__(self): # src
            ^ Source
                pass
                
            def bar():
                ...
                
        def func():
            ...
