code-blocks-server/code-blocks/tests/python/snapshots/python__move_out_scope_fails.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---
input:

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod() # src
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func(): # fail
            ...

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
