code-blocks-server/code-blocks/tests/python/snapshots/python__move_preserve_scope.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---
input:

        @decor1 # src
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self): # fail
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func():
            ...

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
